# neu_wgg

./: .gitignore  CMakeLists.txt  package.xml  readme.md
baidu_map/: mymap.py  mymap.ui  test.py
launch/: cloud_client.launch  data_publisher.launch  data_publisher_test.launch  store.launch
msg/: addtion.msg  angle.msg  carspeed.msg  env.msg  env_and_angle.msg  inertia.msg  joint.msg  location.msg  sensor.msg
scripts/: stop.sh
scripts/cpp/: joint.cpp  sunyao.cpp
scripts/python/: angel_publisher.py  angle_publisher.py  bridge.py  client.py  clientlib.py  cloud_server.py  data_publisher.py  data_wgg.txt  env_publisher.py  env_subscriber.py  location_publisher.py  monitor.py  monitor_bf.py  readme.md  test510.py
scripts/python/baidumapapi/: address.py
scripts/python/monitor-2/: cloud_server2.py  monitor2.py
scripts/python/monitor-3/: ExoManger.py  bridge3.py  client3.py  cloud_server3.py  cloudserver3_bf.py  data_interface.py  data_interface_bf.py  fetch_service.py  monitor3.py  monitor3_bf.py  monitor_interface.py  readme.md  stop_storage.sh  store_service.py  total_publisher.py
scripts/python/motor2/: monitor2.py
scripts/python/motor3/: monitor_interface.py
srv/: call.srv  call3.srv
